# bookstore

./: db.sqlite3  pyproject.toml
bookstore/: settings.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
